--- a/QuanLyCuaHangDTDD/View/QuanLyNhaCungCap.form
+++ b/QuanLyCuaHangDTDD/View/QuanLyNhaCungCap.form
@@ -88,11 +88,13 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="3" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel2" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel8" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtMaNCC1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnTracuuNCC" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel2" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="txtMaNCC1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnTracuuNCC" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
